Исправление ошибки зависимостей